; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/d3d9/extr_d3d9_filters.c_SetLevel.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/d3d9/extr_d3d9_filters.c_SetLevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filter_level = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filter_level*, float)* @SetLevel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetLevel(%struct.filter_level* %0, float %1) #0 {
  %3 = alloca %struct.filter_level*, align 8
  %4 = alloca float, align 4
  store %struct.filter_level* %0, %struct.filter_level** %3, align 8
  store float %1, float* %4, align 4
  %5 = load %struct.filter_level*, %struct.filter_level** %3, align 8
  %6 = getelementptr inbounds %struct.filter_level, %struct.filter_level* %5, i32 0, i32 1
  %7 = load %struct.filter_level*, %struct.filter_level** %3, align 8
  %8 = load %struct.filter_level*, %struct.filter_level** %3, align 8
  %9 = getelementptr inbounds %struct.filter_level, %struct.filter_level* %8, i32 0, i32 0
  %10 = load float, float* %4, align 4
  %11 = call i32 @StoreLevel(%struct.filter_level* %7, i32* %9, float %10)
  %12 = call i32 @atomic_store(i32* %6, i32 %11)
  ret void
}

declare dso_local i32 @atomic_store(i32*, i32) #1

declare dso_local i32 @StoreLevel(%struct.filter_level*, i32*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
